Fix scrollbar border radius

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,7 @@
 ::-webkit-scrollbar {
   width: 12px;
   background-color: #E9AFC5;
+  border-radius: 20px;
 }
 
 ::-webkit-scrollbar-thumb {
